fix: Use contain fit to prevent image cropping

--- a/src/components/AvatarCard.css
+++ b/src/components/AvatarCard.css
@@ -28,7 +28,7 @@
 .avatar-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   max-height: 200px;
 }
 
